updated entry point

--- a/docs/s3.md
+++ b/docs/s3.md
@@ -61,7 +61,7 @@ rise.s3.getFileUrl({
 
 ```js
 const rise = require('rise-aws-foundation')
-const s3 = foundation.s3.cf.makeSimpleBucket('myBucketName')
+const s3 = rise.s3.makeSimpleBucket('myBucketName')
 ```
 
 ## s3.cf.makeBucket
@@ -71,5 +71,5 @@ for storing source files for an application
 
 ```js
 const rise = require('rise-aws-foundation')
-const s3 = foundation.s3.cf.makeBucket('myBucketName')
+const s3 = rise.s3.makeBucket('myBucketName')
 ```
