--- a/docs/s3.md
+++ b/docs/s3.md
@@ -31,7 +31,7 @@ await rise.s3.uploadFile({
 
 ```js
 const rise = require('rise-aws-foundation')
-await rise.s3.getFile({
+const result = await rise.s3.getFile({
     bucket: 'my-test-bucket',
     key: '/pics/mypic.jpg'
 })
@@ -57,14 +57,14 @@ rise.s3.getFileUrl({
 })
 ```
 
-## s3.cf.makeSimpleBucket
+## s3.makeSimpleBucket
 
 ```js
 const rise = require('rise-aws-foundation')
 const s3 = rise.s3.makeSimpleBucket('myBucketName')
 ```
 
-## s3.cf.makeBucket
+## s3.makeBucket
 
 This bucket has additional permissions and encryption settings. This is good
 for storing source files for an application
