--- a/docs/s3.md
+++ b/docs/s3.md
@@ -3,9 +3,7 @@
 ## Introduction
 
 Working with files is a common requirement for apps. If the thing you are working with
-can be represented as a JSON object, this is not the service to use (although, sometimes poeple will dump GB of data
-into s3 for analytics, usually in the form of a zip file). If your data can be represented as
-an object, DynamoDB is the service for you. If not, then S3 is a good service to consider.
+can be represented as a JSON object, this is not the service to use (although, sometimes poeple will dump GB of data into s3 for analytics, usually in the form of a zip file). If your data can be represented as an object, DynamoDB is the service for you. If not, then S3 is a good service to consider.
 
 Files represent any binary file
 such as:
